2003-12-17  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-server.adb:
	(Shutdown): Release memory associated with the server's SSL_Config
	 object.
	
2003-12-17  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-server.adb:
	(Start): Initialize the SSL layer only if not already done by
	 Set_Security. Properly pass the key and security mode to the SSL
	 initialize routine.

	* aws-net-ssl.ads:
	(Null_Config): New constant.

	* aws-net-ssl-certificate.adb:
	(NAME_oneline): New routine.
	(Get): Use NAME_oneline, free certificate before returning.
	
2003-12-17  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(SOURCES): Add aws-net-ssl-certificate.adb.

	* aws-url.adb:
	Fix typo.

	* aws-server.adb:
	(Security_Initialized): Removed.
	(Accept_Socket_Serialized): If secure socket, set the SSL
	 configuration.
	(Set_Security): New version that operate on a single server.
	(Start): If secure server, initialize the security object.
	
	* aws-server.ads:
	(Set_Security): New version that operate on a single server.
	(HTTP): Add SSL_Config field.

	* aws-net-ssl.adb:
	(TS_SSL): Moved to spec private part.
	(Accept_Socket): Use Config object.
	(Connect): Idem.
	(Initialize): Build the config object.
	(Release) [SSL.Config]: New procedure.
	(Set_Config): New procedure.
	(TS_SSL.Initialize): Setup the context certificate exchange if
	 needed.
	(Verify_Callback): New procedure.
	Minor reformatting.
	Update copyright notice.

	* aws-net-ssl.ads:
	(Initialize): Now used to build an SSL configuration object. This
	 make it possible to have different HTTPS server with different
	 settings. New parameter Exchange_Certificate.
	(Config): New type.
	(Release) [SSL.Config]: New procedure.
	(Set_Config): New procedure.
	(TS_SSL): Move into private part from body. This is now a
	 protected type.
	(Null_Ptr): Removed, use now Thin.Null_Pointer.
	(Socket_Type): Add Config field.
	Minor reformatting.
	Update copyright notice.

	* aws-net-ssl-certificate.ads, aws-net-ssl-certificate.adb:
	Initial revision.
